--- a/files/styles.css
+++ b/files/styles.css
@@ -42,6 +42,7 @@ body {
     margin-right: 1rem;
 }
 
+
 /* home section  */
 
 .header {
@@ -128,6 +129,7 @@ body {
     margin-right: 1rem;
 }
 
+
 /* features section  */
 
 .features {
@@ -206,6 +208,7 @@ body {
     transition: all .3s ease;
 }
 
+
 /* want to know about us  */
 
 .about-us {
@@ -237,6 +240,7 @@ body {
     transition: all .3s ease;
     transform: translateX(10px);
 }
+
 
 /* achievers  */
 
@@ -347,6 +351,7 @@ body {
     transform: translateX(10px);
 }
 
+
 /* testimonials  */
 
 .testimonial {
@@ -412,6 +417,7 @@ body {
     font-size: 14px;
 }
 
+
 /* contact  */
 
 .contact {
@@ -450,6 +456,7 @@ textarea::placeholder {
     color: #fff;
     font-weight: 100;
 }
+
 
 /* footer  */
 
@@ -535,14 +542,13 @@ textarea::placeholder {
     .achievers .avatar {
         padding: 1rem 0.5rem;
     }
-    .achievers .avatar .face-img{
+    .achievers .avatar .face-img {
         margin-bottom: 1rem;
     }
-    .achievers .details p{
+    .achievers .details p {
         width: 90%;
     }
 }
-
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     .home-bg .row {
@@ -551,7 +557,7 @@ textarea::placeholder {
     .features .details {
         margin-top: -8rem;
     }
-    .achievers .details p{
+    .achievers .details p {
         width: 80%;
     }
 }
@@ -560,11 +566,9 @@ textarea::placeholder {
     .links a {
         padding: 2px 10px;
     }
-    .achievers .details p{
+    .achievers .details p {
         width: 70%;
     }
 }
 
-@media (min-width: 1200px) {
-    
-}
+@media (min-width: 1200px) {}
