--- a/files/styles.css
+++ b/files/styles.css
@@ -620,3 +620,21 @@ textarea::placeholder {
     display: flex;
     align-items: center;
 }
+
+.gallery-img {
+    width: 100%;
+    height: 240px;
+    box-shadow: 0px 0px 5px #00000020;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.gallery-img img {
+    height: 240px;
+    object-fit: cover;
+    transition-duration: 1s;
+}
+
+.gallery-img img:hover {
+    transform: scale(1.03);
+}
