--- a/files/styles.css
+++ b/files/styles.css
@@ -258,7 +258,6 @@ body {
     color: #ccc;
     font-weight: 100;
     font-size: 14px;
-    width: 50%;
     margin: 0 auto;
 }
 
@@ -332,8 +331,10 @@ body {
 }
 
 .achievers .avatar p {
-    font-size: 14px;
+    font-size: 13px;
     color: #28277a;
+    white-space: nowrap;
+    overflow: hidden;
     font-weight: 100;
 }
 
@@ -576,9 +577,6 @@ textarea::placeholder {
     .achievers .avatar .face-img {
         margin-bottom: 1rem;
     }
-    .achievers .details p {
-        width: 90%;
-    }
     .bannerx {
         padding-top: 50px;
         padding-bottom: 50px;
@@ -592,9 +590,6 @@ textarea::placeholder {
     .features .details {
         margin-top: -8rem;
     }
-    .achievers .details p {
-        width: 80%;
-    }
     .bannerx {
         padding-top: 50px;
         padding-bottom: 50px;
@@ -604,9 +599,6 @@ textarea::placeholder {
 @media (min-width: 992px) and (max-width: 1199.98px) {
     .links a {
         padding: 2px 10px;
-    }
-    .achievers .details p {
-        width: 70%;
     }
     .bannerx {
         padding-top: 180px;
